--- a/bin/install
+++ b/bin/install
@@ -44,8 +44,8 @@ install_tool() {
 
 get_platform() {
 	if [ "$(uname)" = "Linux" ]; then
-		if [ "$(uname -m)" = "aarch64" ]; then
-			echo "aarch64-unknown-linux-musl"
+		if [ "$(grep -oP '^ID=\K\w+' /etc/os-release)" = "alpine" ]; then
+			echo "$(uname -m)-unknown-linux-musl"
 		else
 			echo "$(uname -m)-unknown-linux-gnu"
 		fi
